--- a/src/station1.html
+++ b/src/station1.html
@@ -7,5 +7,14 @@
 <title>Station 1</title>
 </head>
 <body>
+    <img src="assets/image/railway-thumbnail.png" width="50%">
+    <div style="font-weight: bold; font-size: 14pt">
+        <p>TechTrainの使い方</p>
+        <p>TechBowl</p>
+    </div>
+    <div>
+        <p>Suguru Ohki</p>
+        <p>6,722 回視聴・2021</p>
+    </div>
 </body>
 </html>
