--- a/src/station6.html
+++ b/src/station6.html
@@ -1,1 +1,29 @@
 <!DOCTYPE html>
+<html lang="ja">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/css/station4.css" type="text/css">
+    <title>Station 3</title>
+    <meta property="og:image" content=" サムネイル画像の URL" />
+    <meta property="og:url" content=" ページの URL" />
+    <meta property="og:type" content=" ページの種類" />
+    <meta property="og:title" content=" ページの タイトル" />
+
+    <meta property="twitter:card" content=" Twitter Card" />
+    <meta property="twitter:creator" content=" @RKX1200" />
+  </head>
+  <body>
+    <header></header>
+    <main>
+      <div class="card">
+        <img src="./assets/image/railway-thumbnail.png" class="card__img-top" alt="railway thumbnail"/>
+        <p class="card__title">タイトル</p>
+        <p class="card__description">Joseph Solomon</p>
+        <p class="card__description">420 mil visualizações • há 1 ano</p>
+      </div>
+    </main>
+    <footer></footer>
+  </body>
+</html>
