--- a/src/station6.html
+++ b/src/station6.html
@@ -8,11 +8,11 @@
     <title>Station 3</title>
     <meta property="og:image" content=" サムネイル画像の URL" />
     <meta property="og:url" content=" ページの URL" />
-    <meta property="og:type" content=" ページの種類" />
+    <meta property="og:type" content="website" />
     <meta property="og:title" content=" ページの タイトル" />
 
-    <meta property="twitter:card" content=" Twitter Card" />
-    <meta property="twitter:creator" content=" @RKX1200" />
+    <meta name="twitter:card" summary=" Twitter Card" />
+    <meta property="twitter:creator" content=" @nytimes" />
   </head>
   <body>
     <header></header>
