--- a/src/station6.html
+++ b/src/station6.html
@@ -10,9 +10,8 @@
     <meta property="og:url" content=" ページの URL" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content=" ページの タイトル" />
-
-    <meta name="twitter:card" summary=" Twitter Card" />
-    <meta property="twitter:creator" content=" @nytimes" />
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:creator" content="@nytimes" />
   </head>
   <body>
     <header></header>
